   * Implemented a new reference frame algorithm to improve object recognition and location. (Joerg Weber)
   * Improved smartmask feature: real moving objects don't trigger the mask anymore. (Joerg Weber)
   * Added area_detect feature. New config options: area_detect, on_area_detected. (Joerg Weber)
   * Added help in http control http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=396595. (Angel Carpintero)

Bugfixes
   * Fixed a problem with locate and fixed mask overlay (Dag Erlandsson).
   * Preview pictures get the timestamp of moment they were captured (Dag Erlandsson).
   * Fixed http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2007x10x23x093651 (Angel Carpintero)
   * Fix process_id_file when is passed from command line (Angel Carpitero)
   * Fix http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2007x10x27x150419 (Angel Carpintero)

3.2.9 Formal Release - Summary of Changes

Features
   * Removed debian ( to avoid conflicts with debian package) and FreeBSD
     ( no needed to deploy BSD port here ) directories. ( Angel Carpintero )
   * Added --chuid motion to debian init.d script. ( Angel Carpintero )
   * Added Flash video format (FLV) to ffmpeg.
     http://www.lavrsen.dk/twiki/bin/view/Motion/FeatureRequest2007x07x19x131921 (Timo Taskinen).
   * Added FFV1 ( FF video codec 1 ) codec , Lossless encoding
     http://www.lavrsen.dk/twiki/bin/view/Motion/LosslessEncoding (Andrew Hamilton).


Bugfixes
   * Fix segfault in webhttpd.c on motion restart (Angel Carpintero)
   * Fix segfault in debian http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2007x09x24x175945
     (Angel Carpintero)
   * Fix http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=391055 , change
     motion man page , -d requieres level. (Angel Carpintero)
   * Handle mjpeg decoding and fix color issue adding mjpegtools dependecy
     http://www.lavrsen.dk/twiki/bin/view/Motion/MjpegColorIssue
     http://www.lavrsen.dk/twiki/bin/view/Motion/MjpegToYUV420pPatch